test/resources/parser/failing/BadVal.scala
object BadVal
    (val x: Int(32) = val y: Int(32) = 0; 1; 2)
end BadVal